# invest

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  task.md
app/: cli.py
backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  pyproject.toml  task.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_database_foundation.py
backend/app/: __init__.py  cli.py
backend/app/analytics/: floating_coupon_forecast.py
backend/app/api/: main.py  session_store.py
backend/app/api/routes/: demo.py  health.py  income.py  macro.py  portfolio.py  session.py
backend/app/api/services/: dashboard.py  demo_dashboard.py  income.py  positions.py
backend/app/application/: macro_indicators.py  offers.py  portfolio.py
backend/app/data/: floating_coupon_formulas.yaml
backend/app/db/: __init__.py  config.py  session.py
backend/app/demo/: __init__.py
backend/app/domain/: bond_offer.py  bond_position.py  cashflow.py  floating_scenarios.py  macro_indicators.py  portfolio_all.py
backend/app/integrations/cbr/: current_indicators.py
backend/app/interfaces/cli/: parser.py
backend/app/interfaces/cli/commands/: floaters.py
backend/app/reporting/: portfolio.py  report_package.py
backend/app/reporting/renderers/: __init__.py
backend/app/reporting/serializers/: __init__.py  cashflow_csv.py  cashflow_json.py  macro_json.py  offers_csv.py  portfolio_csv.py
backend/app/storage/: macro_indicators.py
backend/app/t_invest/: __init__.py  floating_bonds.py  portfolio_all.py
backend/docs/: architecture-audit.md  cbr-current-indicators-design.md  cli-migration.md  formulas-and-scenarios.md  future-code-organization.md  methodology.md
backend/invest_bonds/: config.py  models.py  render.py
backend/scripts/: check_no_secrets.py
backend/tests/: test_api.py  test_cashflow_forecast.py  test_cashflow_reporting.py  test_db_foundation.py  test_macro_indicators.py  test_money.py  test_portfolio_all.py  test_report_package.py
docs/: content-agent-contract.md
frontend/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
invest_bonds/: __init__.py  adapter.py  cli.py  money.py  rules.py  sdk_compat.py  storage.py
scripts/: check_no_secrets.py
tests/: test_app_cli.py  test_bond_offers.py  test_cashflow_service.py  test_cli.py  test_demo_provider.py  test_floating_coupon_forecast.py  test_floating_coupon_loader.py  test_floating_scenarios.py  test_interfaces_cli.py  test_offers_reporting.py  test_report_package.py  test_rules.py  test_sdk_compat.py  (+1 more)
(+51 files in other folders)
