[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "t-invest-bond-tracker"
version = "0.1.0"
description = "Read-only T-Invest bond portfolio tracker CLI"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
  "rich>=13,<15",
  "t-tech-investments==0.3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
t-invest-bonds = "invest_bonds.cli:main"

[tool.setuptools.packages.find]
include = ["invest_bonds*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
