[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "south-invest"
version = "0.1.0"
description = "Read-only portfolio cashflow and bond analytics engine for T-Invest portfolios."
requires-python = ">=3.12"
keywords = [
  "bonds",
  "portfolio",
  "cashflow",
  "fixed-income",
  "t-invest",
  "financial-analytics",
  "investment-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
  "psycopg[binary]>=3,<4",
  "rich>=13,<15",
  "SQLAlchemy>=2,<3",
  "t-tech-investments==0.3.3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
  "types-PyYAML>=6,<7",
]

[project.urls]
Repository = "https://github.com/SouthVL/invest"
Issues = "https://github.com/SouthVL/invest/issues"

[project.scripts]
south-invest = "app.interfaces.cli.main:main"
t-invest-bonds = "invest_bonds.cli:main"

[tool.setuptools.packages.find]
include = ["invest_bonds*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
warn_unused_ignores = false
no_strict_optional = true
disable_error_code = [
  "var-annotated",
]
exclude = [
  "external_api/",
]
